--- a/style.css
+++ b/style.css
@@ -212,3 +212,33 @@ button{
     font-size: 10px;
     margin-left: 5px;
 }
+
+/* Footer */
+.footer{
+    width: 100%;
+    height: 210px;
+    background-color:#111010;
+    margin-top:70px ;
+    color: #FFF;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.footer h3{
+    font-size: 22px;
+    font-weight: bold;
+}
+.footer h5{
+    font-size: 10px;
+    font-weight: lighter;
+}
+.footer h6{
+    font-size: 8px;
+    font-weight: 100;
+}
+.footer div{
+    width: 320px;
+    text-align: center;
+    margin-bottom: 7px;
+}
